tests/suites/scctests/cc/error/0027-constoverflow.c
#include <limits.h>

static long long var = LLONG_MAX + 1;

int
main()
{
	return 0;
}
